--- a/pom.xml
+++ b/pom.xml
@@ -14,15 +14,9 @@
         Log Bpel event throught RabbitMQ
         ]]>
     </description>
-    <repositories>
-        <repository>
-            <id>my-internal-site</id>
-            <url>http://myserver/repo</url>
-        </repository>
-    </repositories>
     <properties>
         <maven.test.failure.ignore>true</maven.test.failure.ignore>
-        <spring.framework.version>3.0.5.RELEASE</spring.framework.version>
+        <spring.framework.version>3.1.0.RELEASE</spring.framework.version>
         <spring.amqp.version>1.0.0.RELEASE</spring.amqp.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <ode.version>1.3.5</ode.version>
@@ -37,7 +31,26 @@
             </properties>
         </profile>
     </profiles>
-
+    <repositories>
+    <repository>
+      <id>central</id>
+      <name>Maven Repository Switchboard</name>
+      <layout>default</layout>
+      <url>http://repo1.maven.org/maven2</url>
+      <snapshots>
+        <updatePolicy>never</updatePolicy>
+        <enabled>false</enabled>
+      </snapshots>
+    </repository>
+        <repository>
+            <id>spring-milestone</id>
+            <name>Spring Maven RELEASE Repository</name>
+            <url>http://maven.springframework.org/release</url>
+            <snapshots>
+              <updatePolicy>never</updatePolicy>
+            </snapshots>
+        </repository>
+    </repositories>
     <dependencies>
 
         <dependency>
@@ -50,7 +63,17 @@
             <artifactId>spring-rabbit</artifactId>
             <version>${spring.amqp.version}</version>
         </dependency>
+        <dependency>
+          <groupId>com.rabbitmq</groupId>
+          <artifactId>amqp-client</artifactId>
+          <version>2.7.1</version>
+        </dependency>
 
+        <dependency>
+          <groupId>org.codehaus.jackson</groupId>
+          <artifactId>jackson-core-asl</artifactId>
+          <version>1.9.4</version>
+</dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
